Conselho para estudar

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
     <td>Live server</td>
     <td>Liver Share</td>
     <a href="https://catppuccin.com/">Catppuccin</a>
+<h1>Conselho  1</h1>
+<p>Estudar lógica de programação e ter uma boa base em matematica.</p>
+<p>Não faça pausa muito longa nos estudos, vai atrapalhar o seu avanço</p>
 
 
 </body>
